--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
       <h1>EMPIEZA A ENTRENAR</h1>
       <h5><a href="">explora</a></h5>
       <h5><a href="">sigue entrenando</a></h5>
+      <div><a href=""><img src="" alt=""></a></div>
+      <div><a href=""><img src="" alt=""></a></div>
+      <div><a href=""><img src="" alt=""></a></div>
+      <div><a href=""><img src="" alt=""></a></div>
+      <div><a href=""><img src="" alt=""></a></div>
       <!-- Secion principal -->
     </section>
     <section>
+      <div id="map">
+
+      </div>
       <!-- mapa -->
     </section>
     <section>
