empezando script del mapa

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>B morph</title>
+    <style media="screen">
+    *{
+      margin: 0;
+      padding: 0;
+    }
+      #map{
+        height: 500px;
+        width: 80%;
+      }
+    </style>
   </head>
   <body>
     <header>
