--- a/index.html
+++ b/index.html
@@ -36,12 +36,39 @@
       <!-- Secion principal -->
     </section>
     <section>
-      <div id="map">
+      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+      <div id="map"></div>
+      <script type="text/javascript">
+        function initmap() {
+          var map = new google.maps.Map(document.getElementById("map"),{
+            zoom: 4,
+            center: {lat:34.115, Ing: 49.193}
 
-      </div>
+          });
+          var input = document.getElementById('pac-input');
+        var searchBox = new google.maps.places.SearchBox(input);
+        map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+        // Bias the SearchBox results towards current map's viewport.
+        map.addListener('bounds_changed', function() {
+          searchBox.setBounds(map.getBounds());
+        });
+        }
+      </script>
       <!-- mapa -->
     </section>
     <section>
+      <h2>STATUS</h2>
+      <div class="stats">
+        <img src="" alt="">
+        <p>50 trainings</p>
+        <img src="" alt="">
+        <p>5 km distances</p>
+        <img src="" alt="">
+        <p>108 bpm</p>
+        <img src="" alt="">
+        <p>10:40:57 workout time</p>
+      </div>
       <!-- Barra lateral -->
     </section>
   </body>
