--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         <img src="" alt="">
         <p>10:40:57 workout time</p>
       </div>
+
+      <div class="friends">
+        <p>Corri diez kilometros</p>
+        <img src="" alt="">
+        <input type=button name="" value="look for more friends">
+      </div>
       <!-- Barra lateral -->
     </section>
   </body>
