Termino de dividir en terminos basico la página

--- a/index.html
+++ b/index.html
@@ -21,13 +21,24 @@
           <li><a href="">Nueva Actividad</a></li>
           <li><a href="">Desafios</a></li>
           <li><a href="">Mis clases</a></li>
+          <img src="" alt="logo-user">
+          <!-- logo del usuario -->
+          <p>17.5 K</p>
+          <!-- calorias  -->
+          <img src="" alt="">
         </ul>
       </nav>
     </header>
     <section>
-      <h1>EMPIEZA A ENTRENAR</h1>
+      <h1><strong>EMPIEZA A ENTRENAR</strong></h1>
       <h5><a href="">explora</a></h5>
       <h5><a href="">sigue entrenando</a></h5>
+      <ul>
+        <li>categorias</li>
+        <li>horario</li>
+        <li>precio</li>
+        <!-- dispplay de opciones  -->
+      </ul>
       <div><a href=""><img src="" alt=""></a></div>
       <div><a href=""><img src="" alt=""></a></div>
       <div><a href=""><img src="" alt=""></a></div>
@@ -56,9 +67,11 @@
         }
       </script>
       <!-- mapa -->
+      <!-- javascript del mapa  -->
     </section>
     <section>
       <h2>STATUS</h2>
+      <!-- status de salud con valores  -->
       <div class="stats">
         <img src="" alt="">
         <p>50 trainings</p>
@@ -71,9 +84,16 @@
       </div>
 
       <div class="friends">
+        <!-- Amigos y sus actividades -->
         <p>Corri diez kilometros</p>
         <img src="" alt="">
         <input type=button name="" value="look for more friends">
+      </div>
+
+      <div class="app">
+        <!-- boton del app -->
+        <button type="button" name="button"></button>
+        <button type="button" name="button"></button>
       </div>
       <!-- Barra lateral -->
     </section>
