hicimos las diferentes páginas del menu de navegación

--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -11,5 +11,7 @@
         <input type="text" placeholder="Pon tu  nombre" name="" value="" id="nombre">
         <input type="submit" name="" value="Enviar">
     </form>
+    <h2>Video informativo</h2>
+    <a href="https://www.youtube.com/watch?v=vrkKYmrd9B0" target="_blank">Click Aqui</a>
   </body>
 </html>
