--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="">Nueva Actividad</a></li>
-          <li><a href="">Desafios</a></li>
-          <li><a href="">Mis clases</a></li>
+          <li><a href="./nueva-actividad/nueva-actividad.html">Nueva Actividad</a></li>
+          <!-- Aqui se supne es un popout y se abre un formulario -->
+          <li><a href="./desafios/desafios.html">Desafios</a></li>
+          <li><a href="./mis-clases/mis-clases.html">Mis clases</a></li>
+          <li><a href="./contacto/contacto.html">Mis clases</a></li>
           <img src="images/user.png" alt="logo-user">
           <!-- logo del usuario -->
           <p>17.5 K</p>
@@ -80,7 +82,7 @@
               <a href=""><img src="images/appstore.jpg" alt=""></a>
         </figure>
       </article>
-      
+
       <!-- Barra lateral -->
     </section>
   </body>
