--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>contacto</title>
+    <link rel="stylesheet" href="index-css.css">
   </head>
   <body>
     <h1>tienes comentarios? Contactanos !!</h1>
