Agregamos unas cuantas fuentes de Google fonts al archivo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>B morph</title>
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="index-css.css">
   </head>
   <body>
@@ -18,11 +19,15 @@
           <li><a href="./desafios/desafios.html">Desafios</a></li>
           <li><a href="./mis-clases/mis-clases.html">Mis clases</a></li>
           <li><a href="./contacto/contacto.html">Mis clases</a></li>
-          <img src="images/user.png" alt="logo-user">
+          <figure class="menu-user">
+            <img src="images/user.png" alt="logo-user">
+          </figure>
           <!-- logo del usuario -->
           <p>17.5 K</p>
           <!-- calorias  -->
-          <img src="images/fire-icon.png" alt="">
+          <figure class="menu-user-fire">
+            <img src="images/fire-icon.png" alt="">
+          </figure>
         </ul>
       </nav>
     </header>
@@ -45,7 +50,9 @@
       <!-- Secion principal -->
     </section>
     <section class="el-mapa">
-    <img src="images/fake-map.png" alt="mapa falso">
+      <figure class="mapa-image">
+        <img src="images/fake-map.png" alt="mapa falso">
+      </figure>
       <!-- mapa -->
       <!-- javascript del mapa  -->
     </section>
