modificando elbackground, colores de letras y fondos y tamaños

--- a/index.html
+++ b/index.html
@@ -33,26 +33,29 @@
     </header>
     <section class="hero">
       <!-- parte principal de nuestro dashboard -->
-      <h1><strong>EMPIEZA A ENTRENAR</strong></h1>
-      <h5><a href="">explora</a></h5>
-      <h5><a href="">sigue entrenando</a></h5>
-      <ul class="subcategoriasall">
-        <li class="sub-categoria">categorias</li>
-        <li class="sub-categoria">horario</li>
-        <li class="sub-categoria">precio</li>
-        <!-- dispplay de opciones  -->
-      </ul>
-      <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
+      <div class="hero-navigation">
+          <!-- menu de navegacion del contenido -->
+        <h1><strong>Empieza a Entrenar</strong></h1>
+        <h5><a href="">explora</a></h5>
+        <h5><a href="">sigue entrenando</a></h5>
+        <ul class="subcategoriasall">
+          <li class="sub-categoria">categorias</li>
+          <li class="sub-categoria">horario</li>
+          <li class="sub-categoria">precio</li>
+          <!-- dispplay de opciones  -->
+        </ul>
+      </div>
+      <!-- <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/futbol.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/basket.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/hockey.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/natacion.jpg" alt=""></a></div>
-      <!-- Secion principal -->
+      <!-- Secion principal --> -->
     </section>
     <section class="el-mapa">
-      <figure class="mapa-image">
+      <!-- <figure class="mapa-image">
         <img src="images/fake-map.png" alt="mapa falso">
-      </figure>
+      </figure> -->
       <!-- mapa -->
       <!-- javascript del mapa  -->
     </section>
