trabajando algunos elementos con margin

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           <!-- dispplay de opciones  -->
         </ul>
       </div>
-      <!-- <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
+      <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/futbol.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/basket.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/hockey.jpg" alt=""></a></div>
       <div class="actividad-to-do"><a href=""><img src="images/natacion.jpg" alt=""></a></div>
-      <!-- Secion principal --> -->
+      <!-- Secion principal -->
     </section>
     <section class="el-mapa">
       <!-- <figure class="mapa-image">
@@ -61,7 +61,7 @@
     </section>
     <section class="estado-salud-amigos-app">
       <article class="status">
-        <h2>STATUS</h2>
+        <h2 class="estado-title">STATUS</h2>
         <!-- status de salud con valores  -->
         <div class="stats">
           <img src="images/workouts.jpg" alt="">
