maquetando la página header y body

--- a/index.html
+++ b/index.html
@@ -7,93 +7,100 @@
     <link rel="stylesheet" href="index-css.css">
   </head>
   <body>
-    <header class="header">
-      <figure class="logo">
-        <!--aqui va nuestro logo como empresa -->
-        <img src="" alt="">
-      </figure>
-      <nav class="menu">
-        <ul>
-          <li><a href="./nueva-actividad/nueva-actividad.html">Nueva Actividad</a></li>
-          <!-- Aqui se supne es un popout y se abre un formulario -->
-          <li><a href="./desafios/desafios.html">Desafios</a></li>
-          <li><a href="./mis-clases/mis-clases.html">Mis clases</a></li>
-          <li><a href="./contacto/contacto.html">Mis clases</a></li>
-          <figure class="menu-user">
-            <img src="images/user.png" alt="logo-user">
-          </figure>
-          <!-- logo del usuario -->
-          <p>17.5 K</p>
-          <!-- calorias  -->
-          <figure class="menu-user-fire">
-            <img src="images/fire-icon.png" alt="">
-          </figure>
-        </ul>
-      </nav>
-    </header>
-    <section class="hero">
-      <!-- parte principal de nuestro dashboard -->
-      <div class="hero-navigation">
-          <!-- menu de navegacion del contenido -->
-        <h1><strong>Empieza a Entrenar</strong></h1>
-        <h5><a href="">explora</a></h5>
-        <h5><a href="">sigue entrenando</a></h5>
-        <ul class="subcategoriasall">
-          <li class="sub-categoria">categorias</li>
-          <li class="sub-categoria">horario</li>
-          <li class="sub-categoria">precio</li>
-          <!-- dispplay de opciones  -->
-        </ul>
-      </div>
-      <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
-      <div class="actividad-to-do"><a href=""><img src="images/futbol.jpg" alt=""></a></div>
-      <div class="actividad-to-do"><a href=""><img src="images/basket.jpg" alt=""></a></div>
-      <div class="actividad-to-do"><a href=""><img src="images/hockey.jpg" alt=""></a></div>
-      <div class="actividad-to-do"><a href=""><img src="images/natacion.jpg" alt=""></a></div>
-      <!-- Secion principal -->
-    </section>
-    <section class="el-mapa">
-      <!-- <figure class="mapa-image">
-        <img src="images/fake-map.png" alt="mapa falso">
-      </figure> -->
-      <!-- mapa -->
-      <!-- javascript del mapa  -->
-    </section>
-    <section class="estado-salud-amigos-app">
-      <article class="status">
-        <h2 class="estado-title">STATUS</h2>
-        <!-- status de salud con valores  -->
-        <div class="stats">
-          <img src="images/workouts.jpg" alt="">
-          <p>50 trainings</p>
-          <img src="images/distancia.png" alt="">
-          <p>5 km distances</p>
-          <img src="images/heart-rate.jpg" alt="">
-          <p>108 bpm</p>
-          <img src="images/time.png" alt="">
-          <p>10:40:57 workout time</p>
+    <section class="left-content">
+      <header class="header">
+        <figure class="logo">
+          <img src="./images/logo-bmorph-negro.png" alt="">
+          <!--aqui va nuestro logo como empresa -->
+          <img src="" alt="">
+        </figure>
+        <nav class="header-menu">
+          <ul>
+            <li><a href="./nueva-actividad/nueva-actividad.html">Nueva Actividad</a></li>
+            <!-- Aqui se supne es un popout y se abre un formulario -->
+            <li><a href="./desafios/desafios.html">Desafios</a></li>
+            <li><a href="./mis-clases/mis-clases.html">Mis clases</a></li>
+            <li><a href="./contacto/contacto.html">Mis clases</a></li>
+          </ul>
+        </nav>
+
+            <figure class="menu-user">
+              <img src="images/user.png" alt="logo-user">
+            </figure>
+            <!-- logo del usuario -->
+
+            <!-- calorias  -->
+            <figure class="menu-user-fire">
+              <p>17.5 K</p>
+              <img src="images/fire-icon.png" alt="">
+            </figure>
+      </header>
+      <section class="hero">
+        <!-- parte principal de nuestro dashboard -->
+        <div class="hero-navigation">
+            <!-- menu de navegacion del contenido -->
+          <h1><strong>Empieza a Entrenar</strong></h1>
+          <h5><a href="">explora</a></h5>
+          <h5><a href="">sigue entrenando</a></h5>
+          <ul class="subcategoriasall">
+            <li class="sub-categoria">categorias</li>
+            <li class="sub-categoria">horario</li>
+            <li class="sub-categoria">precio</li>
+            <!-- dispplay de opciones  -->
+          </ul>
         </div>
-      </article>
+        <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
+        <div class="actividad-to-do"><a href=""><img src="images/futbol.jpg" alt=""></a></div>
+        <div class="actividad-to-do"><a href=""><img src="images/basket.jpg" alt=""></a></div>
+        <div class="actividad-to-do"><a href=""><img src="images/hockey.jpg" alt=""></a></div>
+        <div class="actividad-to-do"><a href=""><img src="images/natacion.jpg" alt=""></a></div>
+        <!-- Secion principal -->
+      </section>
+      <section class="el-mapa">
+        <!-- <figure class="mapa-image">
+          <img src="images/fake-map.png" alt="mapa falso">
+        </figure> -->
+        <!-- mapa -->
+        <!-- javascript del mapa  -->
+      </section>
+    </section>
+    <section class="right-content">
+      <section class="estado-salud-amigos-app">
+        <article class="status">
+          <h2 class="estado-title">STATUS</h2>
+          <!-- status de salud con valores  -->
+          <div class="stats">
+            <img src="images/workouts.jpg" alt="">
+            <p>50 trainings</p>
+            <img src="images/distancia.png" alt="">
+            <p>5 km distances</p>
+            <img src="images/heart-rate.jpg" alt="">
+            <p>108 bpm</p>
+            <img src="images/time.png" alt="">
+            <p>10:40:57 workout time</p>
+          </div>
+        </article>
 
-      <article class="friends">
-          <!-- Amigos y sus actividades -->
-          <p>jugue volley muy bien !!</p>
-          <img src="volley.jpg" alt="">
-          <input type=button name="" value="look for more friends">
-      </article>
+        <article class="friends">
+            <!-- Amigos y sus actividades -->
+            <p>jugue volley muy bien !!</p>
+            <img src="volley.jpg" alt="">
+            <input type=button name="" value="look for more friends">
+        </article>
 
 
-      <article class="app">
-        <!-- boton del app -->
-        <figure>
-          <a href=""><img src="images/playstore.png" alt=""></a>
-        </figure>
-        <figure>
-              <a href=""><img src="images/appstore.jpg" alt=""></a>
-        </figure>
-      </article>
+        <article class="app">
+          <!-- boton del app -->
+          <figure>
+            <a href=""><img src="images/playstore.png" alt=""></a>
+          </figure>
+          <figure>
+                <a href=""><img src="images/appstore.jpg" alt=""></a>
+          </figure>
+        </article>
 
-      <!-- Barra lateral -->
+        <!-- Barra lateral -->
+      </section>
     </section>
   </body>
 </html>
