Mejorando la sección de status

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
         <div class="hero-navigation">
             <!-- menu de navegacion del contenido -->
           <h1><strong>Empieza a Entrenar</strong></h1>
-          <h5><a href="">explora</a></h5>
-          <h5><a href="">sigue entrenando</a></h5>
+          <div class="hero-submenus">
+            <h5 class="hero-submenu-explora"><a href="">explora</a></h5>
+            <h5 class="gero-submenu-sigue"><a href="">sigue entrenando</a></h5>
+          </div>
           <ul class="subcategoriasall">
             <li class="sub-categoria">categorias</li>
             <li class="sub-categoria">horario</li>
@@ -49,11 +51,18 @@
             <!-- dispplay de opciones  -->
           </ul>
         </div>
-        <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
-        <div class="actividad-to-do"><a href=""><img src="images/futbol.jpg" alt=""></a></div>
-        <div class="actividad-to-do"><a href=""><img src="images/basket.jpg" alt=""></a></div>
-        <div class="actividad-to-do"><a href=""><img src="images/hockey.jpg" alt=""></a></div>
-        <div class="actividad-to-do"><a href=""><img src="images/natacion.jpg" alt=""></a></div>
+        <div class="hero-clases">
+          <div class="actividad-to-do"><a href=""><img src="images/ballet.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/futbol.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/basket.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/hockey.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/natacion.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/breakdance.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/salsa.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/golf.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/atletismo.jpg" alt=""></a></div>
+          <div class="actividad-to-do"><a href=""><img src="images/volley.jpg" alt=""></a></div>
+        </div>
         <!-- Secion principal -->
       </section>
       <section class="el-mapa">
@@ -70,17 +79,24 @@
           <h2 class="estado-title">STATUS</h2>
           <!-- status de salud con valores  -->
           <div class="stats">
-            <img src="images/workouts.jpg" alt="">
-            <p>50 trainings</p>
-            <img src="images/distancia.png" alt="">
-            <p>5 km distances</p>
-            <img src="images/heart-rate.jpg" alt="">
-            <p>108 bpm</p>
-            <img src="images/time.png" alt="">
-            <p>10:40:57 workout time</p>
+            <div class="stats-workout">
+              <img src="images/workouts.jpg" alt="">
+              <p>50 trainings</p>
+            </div>
+            <div class="stats-distancia">
+              <img src="images/distancia.png" alt="">
+              <p>5 km distances</p>
+            </div>
+            <div class="stats-heartrate">
+              <img src="images/heart-rate.jpg" alt="">
+              <p>108 bpm</p>
+            </div>
+            <div class="stats-time">
+              <img src="images/time.png" alt="">
+              <p>10:40:57 <br>workout time</p>
+            </div>
           </div>
         </article>
-
         <article class="friends">
             <!-- Amigos y sus actividades -->
             <p>jugue volley muy bien !!</p>
